# Leo

ASM-DZ/: config.s  main1.s
ДЗ 2/inc/: stm32f10x_RCC.h
ДЗ 2/keil/: rccLab1.c
ДЗ 2/src/: stm32f10x_RCC.c
Лаб1 ASM/inc/: config.s
Лаб1 ASM/keil/: lab1.uvguix.Niko  lab1.uvoptx  main.s
Лаб1 Си/keil/: RCC.uvguix.Niko  RCC.uvoptx  rccLab1.c  stm32f10x_RCC.h  stm32f10x_RCC.h.gch
Лаб1 Си/src/: stm32f10x_RCC.c
Лаб2 Си Uart/inc/: stm32f10x_RCC.h
Лаб2 Си Uart/keil/: CMakeLists.txt  RCC.uvguix.Niko  RCC.uvoptx  rccLab1.c
Лаб2 Си Uart/src/: stm32f10x_RCC.c
Лаб2 Си/inc/: stm32f10x_RCC.h
Лаб2 Си/keil/: RCC.uvguix.Niko  RCC.uvoptx  RCC.uvprojx  rccLab1.c
Лаб2 Си/src/: stm32f10x_RCC.c
